force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Was_data_verified__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Was_data_verified__c</fullName>
    <description>Yes : TSN/CSN available from Airline and matching
No  : TSN/CSN available from Airline but not matching
N/A : TSN/CSN not available from Airline</description>
    <inlineHelpText>Yes : TSN/CSN available from Airline and matching
No  : TSN/CSN available from Airline but not matching
N/A : TSN/CSN not available from Airline</inlineHelpText>
    <label>Z_Unused_2404 Was Data Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>