force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_hidden_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_hidden_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Lease__c.leaseworks__Aircraft__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Aircraft__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Utilization</relationshipLabel>
    <relationshipName>Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>