force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_No_Invoice_AsIn_URStaging__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_No_Invoice_AsIn_URStaging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if no invoice is checked in UR staging object.
Checked only for Utilizations created by Utilization Staging process AND No Invoice option is selected</description>
    <inlineHelpText>Checked only for Utilizations created by Utilization Staging process AND No Invoice option is selected</inlineHelpText>
    <label>_No_Invoice_AsIn_URStaging</label>
    <type>Checkbox</type>
</CustomField>