force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_Number_Of_Months_Periodicity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Number_Of_Months_Periodicity__c</fullName>
    <description>Returns number of months in a particular period
&quot;The original Functionality:
{Periodicity} gets copied in {Utilization_periodicity} based on this {Number of Months periodicity} sets as 1 or 3 or 6 or 12. This value further copies to No.of months internal variable. But this variable is used across  the file. 
Since the {periodicity} is not taking user input, it always returns null, then the No.of months internal variable returns 1&quot;</description>
    <formula>CASE(  leaseworks__Y_Hidden_Utilization_Periodicity__c  , &#39;Monthly&#39;, 1, &#39;Quarterly&#39;, 3,&#39;Semi-Annually&#39;,6,&#39;Annually&#39;,12,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Frequency of Utilization logging</inlineHelpText>
    <label>_Number_Of_Months_Periodicity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>