force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_Overridden__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_Overridden?</label>
    <type>Checkbox</type>
</CustomField>