force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_Perdiocity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Perdiocity__c</fullName>
    <description>The original Functionality:
{Periodicity} gets copied in {Utilization_periodicity} based on this {Number of Months periodicity} sets as 1 or 3 or 6 or 12. This value further copies to No.of months internal variable. But this variable is used across  the file. 
Since the {periodicity} is not taking user input, it always returns null, then the No.of months internal variable returns 1</description>
    <formula>text( leaseworks__Y_hidden_Lease__r.leaseworks__Utilization_Periodicity__c)</formula>
    <label>_Perdiocity</label>
    <type>Text</type>
</CustomField>