force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_Running_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Running_Hours__c</fullName>
    <description>This field captures the value from the Airframe Flight Hours after approving the utilization and revert if the utilization is un-approved or deleted.The value is same values as in the Airframe flight hours and referred in backend calculation.</description>
    <label>_Running Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>