force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_TSN_CSN_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_TSN_CSN_Verified_By__c</fullName>
    <description>Last updated user and date</description>
    <inlineHelpText>Last updated user and date</inlineHelpText>
    <label>Z_Unused_2404_TSN/CSN Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>