force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_UR_CreationMethod__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_UR_CreationMethod__c</fullName>
    <description>Used to capture the way by which utilizations are created.</description>
    <inlineHelpText>Utilization creation method. Can be 1. UI  2.Staging Objects. 3. Dataloader.</inlineHelpText>
    <label>Z_Unused_2404_UR_CreationMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>