force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Y_Hidden_UR_Type_Order__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_UR_Type_Order__c</fullName>
    <description>Auto assigned sorting number depending on the Utilization Type, used for reporting and Utilization Studio</description>
    <formula>CASE(text(leaseworks__Type__c)
,&#39;Assumed/Estimated&#39; , 1
, &#39;Actual&#39;, 2
, &#39;Manual Credits/Adjustments&#39;, 3
, &#39;True Up Gross&#39;, 4
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto assigned sorting number depending on the Utilization Type, used for reporting and Utilization Studio</inlineHelpText>
    <label>_UR Type Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>