force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/pro_External_Document_Link_Long__c.field-meta.xml
<CustomField>
    <fullName>pro_External_Document_Link_Long__c</fullName>
    <description>Field used to surface long document links through a screenflow, ensuring that the link cannot break.</description>
    <label>External Document Link (Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>