force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__AirframeFlightCyclesRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__AirframeFlightCyclesRule</fullName>
    <active>true</active>
    <description>Utilization values should always be positive. Please use the True-up for correction if necessary</description>
    <errorConditionFormula>AND(leaseworks__Airframe_Cycles_Landing_During_Month__c  &lt; 0, NOT(ISPICKVAL( leaseworks__Type__c , &quot;TSN/CSN Correction&quot;)))</errorConditionFormula>
    <errorDisplayField>leaseworks__Airframe_Cycles_Landing_During_Month__c</errorDisplayField>
    <errorMessage>Utilization values should always be positive. Please use the True-up for correction if necessary</errorMessage>
</ValidationRule>