force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Assumed_Estimated_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Assumed_Estimated_cannot_be_changed</fullName>
    <active>false</active>
    <description>Can&#39;t convert an existing UR to true up and vice versa.</description>
    <errorConditionFormula>false /*!ISNEW() &amp;&amp;  (Assumed_Estimated__c  !=  PRIORVALUE(Assumed_Estimated__c ) )*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Assumed_Estimated__c</errorDisplayField>
    <errorMessage>You cannot convert an existing  Utilization Report to Assumed/Estimated and vice versa.</errorMessage>
</ValidationRule>