force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Cannot_Change_Month_Ending.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Cannot_Change_Month_Ending</fullName>
    <active>true</active>
    <description>Utilization report date cannot be changed once saved.</description>
    <errorConditionFormula>AND(
! $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c 
,
if( ISNEW() ,false, ISCHANGED( leaseworks__Month_Ending__c ) )

)</errorConditionFormula>
    <errorDisplayField>leaseworks__Month_Ending__c</errorDisplayField>
    <errorMessage>Utilization Report date cannot be changed once saved.</errorMessage>
</ValidationRule>