force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Cannot_mark_paid_if_not_fully_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Cannot_mark_paid_if_not_fully_paid</fullName>
    <active>false</active>
    <description>Deprecated: Ensures payment is made in full before marking the UR as paid.</description>
    <errorConditionFormula>/*and(MR_Paid__c, Balance_MR__c&gt;0, !True_Up__c)*/
false</errorConditionFormula>
    <errorDisplayField>leaseworks__MR_Paid__c</errorDisplayField>
    <errorMessage>Please ensure payment is made in full before marking the UR as paid.</errorMessage>
</ValidationRule>