force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Cannot_Update_If_MR_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Cannot_Update_If_MR_Paid</fullName>
    <active>false</active>
    <description>Z_Unused_Cannot_Update_If_MR_Paid</description>
    <errorConditionFormula>false /*AND( !$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c   ,
false
)*/</errorConditionFormula>
    <errorMessage>You cannot update the record once the Utilization Report is paid.</errorMessage>
</ValidationRule>