force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Dates_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Dates_Order</fullName>
    <active>false</active>
    <description>@Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Please check the validity and sequence of dates. Date of submission cannot be in the future and the dates should be in order.</errorMessage>
</ValidationRule>