force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Legacy_data_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Legacy_data_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( leaseworks__Legacy_Data__c ) !=leaseworks__Legacy_Data__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Legacy_Data__c</errorDisplayField>
    <errorMessage>Legacy Data cannot be modified.</errorMessage>
</ValidationRule>