force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__OneTrueUpRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__OneTrueUpRule</fullName>
    <active>true</active>
    <description>You can select either Manual Credits/Adjustments or True Up or Assumed/Estimated?.</description>
    <errorConditionFormula>OR (
    AND(leaseworks__True_Up_Gross__c,  leaseworks__True_Up__c )
   ,AND(leaseworks__True_Up_Gross__c,  leaseworks__Assumed_Estimated__c)
   ,AND(leaseworks__Assumed_Estimated__c,  leaseworks__True_Up__c )
   )</errorConditionFormula>
    <errorMessage>You can select only one checkbox. Either Manual Credits/Adjustments or True Up or Assumed/Estimated?.</errorMessage>
</ValidationRule>