force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__PayOnlyAfterApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PayOnlyAfterApproval</fullName>
    <active>false</active>
    <description>Deprecated: UR Can be marked as paid only after it is approved by lessor.</description>
    <errorConditionFormula>/*AND( !(ISPICKVAL(PRIORVALUE(Status__c), &apos;Approved By Lessor&apos;)),  MR_Paid__c )*/
false</errorConditionFormula>
    <errorMessage>Utilization Report can be marked as paid only after it is approved by lessor.</errorMessage>
</ValidationRule>