force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Start_And_End_Date_Within_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Start_And_End_Date_Within_Period</fullName>
    <active>true</active>
    <description>Utilization start and end date should be in the same month as that of the period ending.</description>
    <errorConditionFormula>OR
(MONTH( leaseworks__Start_Date__c) !=  MONTH(leaseworks__Month_Ending__c),
  YEAR(leaseworks__Start_Date__c) != YEAR(leaseworks__Month_Ending__c),
MONTH( leaseworks__End_Date__c) !=  MONTH(leaseworks__Month_Ending__c),
  YEAR(leaseworks__End_Date__c) != YEAR(leaseworks__Month_Ending__c))</errorConditionFormula>
    <errorMessage>Utilization start and end date should be in the same month as that of the period ending.</errorMessage>
</ValidationRule>