force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__TotalCycles.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TotalCycles</fullName>
    <active>false</active>
    <description>Total cycles cannot be negative or cannot be too large. Assuming minimum 10 minutes per cycle.</description>
    <errorConditionFormula>false
/*Bobby 20180724 - This validation is no longer needed. Leaving it to the user to enter correct values. */</errorConditionFormula>
    <errorDisplayField>leaseworks__Airframe_Cycles_Landing_During_Month__c</errorDisplayField>
    <errorMessage>Invalid value. Flight cycles cannot be negative and it cannot be too high.</errorMessage>
</ValidationRule>