force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__TrueUp_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TrueUp_cannot_be_changed</fullName>
    <active>false</active>
    <description>Can&#39;t convert an existing UR to true up and vice versa.</description>
    <errorConditionFormula>false /*!ISNEW() &amp;&amp;  (True_Up__c  !=  PRIORVALUE(True_Up__c ) )*/</errorConditionFormula>
    <errorDisplayField>leaseworks__True_Up__c</errorDisplayField>
    <errorMessage>You cannot convert an existing  Utilization Report to True Up and vice versa.</errorMessage>
</ValidationRule>