force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__TrueUpGross_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TrueUpGross_cannot_be_changed</fullName>
    <active>false</active>
    <description>Can&apos;t convert an existing UR to true up and vice versa.</description>
    <errorConditionFormula>false /*!ISNEW() &amp;&amp;  (True_Up_Gross__c!=  PRIORVALUE(True_Up_Gross__c) )*/</errorConditionFormula>
    <errorDisplayField>leaseworks__True_Up_Gross__c</errorDisplayField>
    <errorMessage>You cannot convert an existing  Utilization Report to True Up and vice versa.</errorMessage>
</ValidationRule>