force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__TrueUpType_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TrueUpType_cannot_be_changed</fullName>
    <active>false</active>
    <description>You cannot change True Up Type of an existing  Utilization Report and vice versa.</description>
    <errorConditionFormula>false /*!ISNEW() &amp;&amp;  ( Text(True_Up_Type__c) !=  Text(PRIORVALUE(True_Up_Type__c)) )*/</errorConditionFormula>
    <errorDisplayField>leaseworks__True_Up_Type__c</errorDisplayField>
    <errorMessage>You cannot change True Up Type of an existing  Utilization Report and vice versa.</errorMessage>
</ValidationRule>