force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__URTypeRequiredRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__URTypeRequiredRule</fullName>
    <active>true</active>
    <description>Please select Type.</description>
    <errorConditionFormula>IsBlank(Text(leaseworks__Type__c))</errorConditionFormula>
    <errorDisplayField>leaseworks__Type__c</errorDisplayField>
    <errorMessage>Type is a mandatory field.</errorMessage>
</ValidationRule>