force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__URTypeRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__URTypeRule</fullName>
    <active>true</active>
    <description>Can&#39;t convert an existing UR Type to Other.</description>
    <errorConditionFormula>And(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c 
,!ISNEW() 
, !IsBlank(PRIORVALUE(leaseworks__Type__c))
, Text(leaseworks__Type__c)!=  Text(PRIORVALUE(leaseworks__Type__c))
, Text(PRIORVALUE(leaseworks__Type__c))!=&#39;Provision&#39;
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Type__c</errorDisplayField>
    <errorMessage>You cannot modify an existing Utilization Report Type.</errorMessage>
</ValidationRule>