force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Validate_Lease_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Validate_Lease_Type</fullName>
    <active>true</active>
    <description>Utilization cannot be created for Non-Lease Agreement contract.</description>
    <errorConditionFormula>AND(
! $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c
,leaseworks__Y_hidden_Lease__r.RecordType.DeveloperName == &apos;Non_Lease_Agreement&apos;)</errorConditionFormula>
    <errorMessage>Utilization cannot be created for Non-Lease Agreement contract.</errorMessage>
</ValidationRule>