force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/leaseworks__Validate_Utilization_Start_And_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Validate_Utilization_Start_And_End_Date</fullName>
    <active>true</active>
    <description>Utilization end date cannot be earlier than utilization start date</description>
    <errorConditionFormula>leaseworks__End_Date__c &lt;  leaseworks__Start_Date__c</errorConditionFormula>
    <errorMessage>Utilization end date cannot be earlier than utilization start date</errorMessage>
</ValidationRule>