force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/Submitter_Cannot_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitter_Cannot_Approve</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(leaseworks__Status__c),
ISPICKVAL(leaseworks__Status__c, &#39;Approved By Lessor&#39;),
$User.Id ==  SubmittedByID__c 
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Status__c</errorDisplayField>
    <errorMessage>You cannot approve a utilization record that you submitted. Please ask another user to review and Approve the utilization.</errorMessage>
</ValidationRule>