force-app/main/default/objects/leaseworks__Utilization_Report__c/validationRules/Validate_Lease_Type_local.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Lease_Type_local</fullName>
    <active>false</active>
    <description>Utilization cannot be created for Non-Lease Agreement contract.</description>
    <errorConditionFormula>AND(
! $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c
,leaseworks__Y_hidden_Lease__r.RecordType.DeveloperName == &#39;Non_Lease_Agreement&#39;)</errorConditionFormula>
    <errorMessage>Utilization cannot be created for Non-Lease Agreement contract.</errorMessage>
</ValidationRule>