force-app/main/default/objects/leaseworks__Utilization_Report__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Type__c</columns>
    <columns>leaseworks__Month_Ending__c</columns>
    <columns>leaseworks__Total_Maintenance_Reserve__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>